style: minor fix to Files column spacing

--- a/src/ui/files/Files.scss
+++ b/src/ui/files/Files.scss
@@ -75,12 +75,12 @@
     }
 
     .loading-icon {
-      width: 48px;
+      min-width: 48px;
       padding-left: $padding-large;
     }
 
     .file-icon {
-      width: 48px;
+      min-width: 48px;
       padding-right: $padding-small;
 
       .material-icons {
